# l4-rust

./: .gitignore  .project  Cargo.toml  readme.md  z.zhscript  z.zs
env/: r-ver.zhscript
src/: call_.rs  dl_.rs  func_.rs  funcs_.rs  i_.rs  lib.rs  main.rs  test_.rs
src2/: clpars-attr.zhscript  clpars-attr.zs  clpars-ta.zs  dl.zs  gjk.zs  strftime.zhscript
src2/lib/: clpars4  doscmd4  file4  gjk4  magic4  stdc
