[package]
name = "l"
version = "3.12.31"
authors = ["zzzzzzzzzzz <zzzzzzzzzzzgg@gmail.com>"]
edition = "2018"

[lib]
name = "l4"
crate-type = ["cdylib"]

[dependencies]
zhscript2 = {version = "3.12.31", path = "../zhscript2-rust", features = ["thread"]}
zs2_l4_ = {version = "3.6.30", path = "../zs2-l4-rust"}
libloading = "0.5.0"
lazy_static = "1.4.0"

[profile.release]
strip = true
