[package]
name = "l"
version = "4.10.14"
authors = ["zzzzzzzzzzz <zzzzzzzzzzzgg@gmail.com>"]
edition = "2018"

[lib]
name = "l4"
crate-type = ["cdylib"]

[dependencies]
zhscript2 = {version = "4.10.14", path = "../zhscript2-rust", features = ["thread"]}
zs2_l4_ = {version = "4.8.27", path = "../zs2-l4-rust"}
libloading = "0.5.0"
lazy_static = "1.4.0"

[profile.release]
strip = true
